external-crates/move/crates/move-compiler/tests/move_check/parser/attribute_num_sign_no_bracket.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/attribute_num_sign_no_bracket.move:4:5
  │
4 │     fun foo() {}
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected '['
